-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.3
-
-
41f2fcd03 (dev), e35ecc97f (6.10), 56662f0a6 (6.9), 06959cb13 (tqtc/lts-6.8)
While upgrading Qt6.2 to Qt6.8.3, the imported 3D surface model shows some wrong shading with RuntimeLoader. It is GLTF binary format. I have to implemented my own GLTF loader with tinygltf and the model shows correctly. There would be something wrong with importing GLB files. It can be verified with 3rd GLTF viewer like gltf-viewer. The problem can be reproduced by Examples/Qt-6.8.3/quick3d/runtimeloader with attachament ui.glb file.
For Gerrit Dashboard: QTBUG-137182 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
649138,5 | asset: don't change normals in assets | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
649683,2 | asset: don't change normals in assets | 6.10 | qt/qtquick3d | Status: MERGED | +2 | 0 |
649753,2 | asset: don't change normals in assets | 6.9 | qt/qtquick3d | Status: MERGED | +2 | 0 |
649799,2 | asset: don't change normals in assets | tqtc/lts-6.8 | qt/tqtc-qtquick3d | Status: MERGED | +2 | 0 |